# ansible2cxx

./: .gitignore  CMakeLists.txt  README.md  TestScript.yml
include/ansible2cxx-api/ansible2cxx/api/: API.h  API.hpp  Caller.hpp  Posix_API.hpp  Win32_API.h  Win32_API.hpp
include/ansible2cxx-pkg_api/ansible2cxx/pkg_api/: PkgAPI.h  PkgAPI.hpp
include/ansible2cxx/ansible2cxx/: CliArgs.h  Globals.h  Globals.hpp
include/ansible2cxx/ansible2cxx/App/: CliArgs.h  CliArgs.hpp  ModuleFileParser.h  ModuleFileParser.hpp  TaskHandler.h  VarHandle.h  VarHandle.hpp
include/ansible2cxx/ansible2cxx/Utils/: HelpPage.hpp  Tools.hpp  Utils.h  Utils.hpp
resources/sysroot/etc/ansible2cxx/: modules.list
resources/sysroot_win32/_ProgramFiles_/: modules.list  standard_modules.list
scripts/: MakeToolchain.sh
src/: CliArgs.cpp  TestCode.cpp  main.cpp
src/API/: API.cpp  Caller.cpp  CopyFile.cpp
src/Application/: CliArgs.cpp  MainExec.cpp  ModuleFileParser.cpp  TaskHandler.cpp  VarHandle.cpp
src/ApplicationGUI/: GuiMain.cpp  MainHead.h
src/ApplicationGUI/Qt/: GenerateWindow.ui
src/ApplicationGUI/Win64/: GuiMainExec.cpp
src/PkgAPI/: PkgAPI.cpp
src/Utils/: HelpPage.cpp  Tools.cpp  Utils.cpp
toolchains/: Linux_MinGW_Win64.cmake  Linux_RISCV64.cmake  Linux_amd64.cmake  Linux_arm64.cmake
